Create header structure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,47 @@
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     </head>
+
     <body>
-        
+
+        <header>
+            <section class="nav flex-center">
+                <div class="left-nav-content flex-center">
+                    <img src="./img/logo-small.png" alt="Discord Logo">
+                    <nav class="main-nav">
+                        <ul>
+                            <li>Item</li>
+                            <li>Item</li>
+                            <li>Item</li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="right-nav-content flex-center">
+                    <nav class="main-nav">
+                        <ul>
+                            <li>Item</li>
+                            <li>Item</li>
+                            <li>Item</li>
+                        </ul>
+                    </nav>
+                    <div class="btn">
+                        <button>Accedi</button>
+                        <button>Inizia</button>
+                    </div>
+                </div>
+            </section>
+
+            <section class="jumbo">
+                <div class="jumbo-container big-container">
+                    <div class="jumbo-img"></div>
+                </div>
+            </section>
+        </header>
+
+        <main></main>
+
+        <footer></footer>
+
     </body>
 </html>
