Create business plane section structure

--- a/index.html
+++ b/index.html
@@ -48,13 +48,36 @@
             </section>
 
             <section class="jumbo">
-                <div class="jumbo-container big-container">
+                <div class="big-container">
                     <div class="jumbo-img"></div>
                 </div>
             </section>
         </header>
 
-        <main></main>
+        <main>
+            <!-- BUSINESS PLANE -->
+            <section class="business-plane">
+                <div class="default-container">
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+                
+                    <div class="box-plane-general-section">
+                        <div class="box-plane-business">
+                            <div class="title-box-plane"></div>
+                        </div>
+
+                        <div class="box-plane-business">
+                            <div class="title-box-plane"></div>
+
+                        </div>
+
+                        <div class="box-plane-business">
+                            <div class="title-box-plane"></div>
+                        </div>
+                    </div>
+                </div>
+                
+            </section>
+        </main>
 
         <footer></footer>
 
