Create team section structure

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <main>
             <!-- BUSINESS PLANE -->
             <section class="business-plane">
+
                 <div class="default-container">
                     <h2>Lorem ipsum dolor sit amet.</h2>
                 
@@ -76,6 +77,15 @@
                     </div>
                 </div>
                 
+            </section>
+
+            <!-- TEAM-->
+            <section class="team">
+                <div class="default-container">
+                    <div class="box-team">
+                        <div class="title-team"></div>
+                    </div>
+                </div>
             </section>
         </main>
 
