Create find partner section structure

--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
                     </div>
                 </div>
             </section>
+
+            <!-- FIND PARTNER-->
+            <section class="find-partner">
+                <div class="default-container flex-center">
+                    <div class="left-findpartner-img"></div>
+                    <div class="right-findpartner-txt"></div>
+                </div>
+            </section>
+
         </main>
 
         <footer></footer>
