Create bussiness operation row structure

--- a/index.html
+++ b/index.html
@@ -96,6 +96,48 @@
                 </div>
             </section>
 
+
+            <!-- BUSINESS OPERATIONS-->
+            <section class="business-operations">
+                <div class="default-container">
+                    <h2>Esegui più operazioni</h2>
+
+                    <div class="business-operation-row flex-center">
+                        <article class="business-operation-card">
+                            <div class="business-operation-card-box-img">img</div>
+                            <div class="business-operation-card-box-txt">txt</div>
+                        </article>
+
+                        <article class="business-operation-card">
+                            <div class="business-operation-card-box-img">img</div>
+                            <div class="business-operation-card-box-txt">txt</div>
+                        </article>
+
+                        <article class="business-operation-card">
+                            <div class="business-operation-card-box-img">img</div>
+                            <div class="business-operation-card-box-txt">txt</div>
+                        </article>
+                    </div>
+
+                    <div class="business-operation-row flex-center">
+                        <article class="business-operation-card">
+                            <div class="business-operation-card-box-img">img</div>
+                            <div class="business-operation-card-box-txt">txt</div>
+                        </article>
+
+                        <article class="business-operation-card">
+                            <div class="business-operation-card-box-img">img</div>
+                            <div class="business-operation-card-box-txt">txt</div>
+                        </article>
+
+                        <article class="business-operation-card">
+                            <div class="business-operation-card-box-img">img</div>
+                            <div class="business-operation-card-box-txt">txt</div>
+                        </article>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
         <footer></footer>
