Create customer data section structure

--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
                 </div>
             </section>
 
+            <!-- CUSTOMER DATA-->
+            <section class="customer-data">
+                <div class="default-container">
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+                    <a href="#">Lorem ipsum dolor</a>
+                </div>
+            </section>
+
+
         </main>
 
         <footer></footer>
