Create Company Collaboration section structure

--- a/index.html
+++ b/index.html
@@ -147,6 +147,27 @@
                 </div>
             </section>
 
+            <!-- COMPANY COLLABORATION-->
+            <section class="company-collaboration flex-center">
+                <div class="company-collaboration-square">
+                    <div class="company-collaboration-square-box"></div>
+                    <div class="company-collaboration-square-box"></div>
+                    <div class="company-collaboration-square-box"></div>
+                    <div class="company-collaboration-square-box"></div>
+                </div>
+
+                <div class="company-collaboration-description">
+                </div>
+
+                <div class="company-collaboration-square">
+                    <div class="company-collaboration-square-box"></div>
+                    <div class="company-collaboration-square-box"></div>
+                    <div class="company-collaboration-square-box"></div>
+                    <div class="company-collaboration-square-box"></div>
+                </div>
+            </section>
+
+
 
         </main>
 
