Create Try Dropbox section structure

--- a/index.html
+++ b/index.html
@@ -167,6 +167,14 @@
                 </div>
             </section>
 
+            <!-- Try Dropbox-->
+            <section class="customer-data bg-blue">
+                <div class="default-container">
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+                    <a href="#">Lorem ipsum dolor</a>
+                </div>
+            </section>
+
 
 
         </main>
