Create Faq section structure

--- a/index.html
+++ b/index.html
@@ -175,6 +175,18 @@
                 </div>
             </section>
 
+            <!-- Faq -->
+            <section class="faq">
+                <div class="default-container">
+                    <h1>Domande Frequenti</h1>
+
+                    <div class="faq-section">
+                        <span class="faq-section-close">Lorem ipsum dolor sit amet consectetur.</span>
+                        <span class="faq-section-close">Lorem ipsum dolor sit amet consectetur.</span>
+                        <span class="faq-section-close">Lorem ipsum dolor sit amet consectetur.</span>
+                    </div>
+                </div>
+            </section>
 
 
         </main>
