Create Footer section structure

--- a/index.html
+++ b/index.html
@@ -191,7 +191,74 @@
 
         </main>
 
-        <footer></footer>
+        <footer>
+            <div class="big-container">
+                <section class="top-footer flex-around">
+                    <nav class="footer-navs">
+                        <h3>Dropbox</h3>
+                        <ul>
+                            <li><a href="#">Applicazione Dekstop</a></li>
+                            <li><a href="#">Perché Dropbox</a></li>
+                            <li><a href="#">Piani</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Funzioni</a></li>
+                        </ul>
+                    </nav>
+
+                    <nav class="footer-navs">
+                        <h3>Dropbox</h3>
+                        <ul>
+                            <li><a href="#">Applicazione Dekstop</a></li>
+                            <li><a href="#">Perché Dropbox</a></li>
+                            <li><a href="#">Piani</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Funzioni</a></li>
+                        </ul>
+                    </nav>
+
+                    <nav class="footer-navs">
+                        <h3>Dropbox</h3>
+                        <ul>
+                            <li><a href="#">Applicazione Dekstop</a></li>
+                            <li><a href="#">Perché Dropbox</a></li>
+                            <li><a href="#">Piani</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Funzioni</a></li>
+                        </ul>
+                    </nav>
+
+                    <nav class="footer-navs">
+                        <h3>Dropbox</h3>
+                        <ul>
+                            <li><a href="#">Applicazione Dekstop</a></li>
+                            <li><a href="#">Perché Dropbox</a></li>
+                            <li><a href="#">Piani</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Funzioni</a></li>
+                        </ul>
+                    </nav>
+
+                    <nav class="footer-navs">
+                        <h3>Dropbox</h3>
+                        <ul>
+                            <li><a href="#">Applicazione Dekstop</a></li>
+                            <li><a href="#">Perché Dropbox</a></li>
+                            <li><a href="#">Piani</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Funzioni</a></li>
+                        </ul>
+                    </nav>
+                    
+
+                </section>
+
+                <div class="separator-line"></div>
+
+                <section class="bottom-footer">
+                    <span class="languages">Italian</span>
+                </section>
+            </div>
+        </footer>
 
     </body>
 </html>
