Add Header nav content

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <img src="./img/logo-small.png" alt="Discord Logo">
                     <nav class="main-nav">
                         <ul>
-                            <li>Item</li>
-                            <li>Item</li>
-                            <li>Item</li>
+                            <li> <a href="#">Perché Dropbox </a></li>
+                            <li> <a href="#">Funzioni </a></li>
+                            <li> <a href="#">Piani e Prezzi </a></li>
                         </ul>
                     </nav>
                 </div>
@@ -35,14 +35,13 @@
                 <div class="right-nav-content flex-center">
                     <nav class="main-nav">
                         <ul>
-                            <li>Item</li>
-                            <li>Item</li>
-                            <li>Item</li>
+                            <li> <a href="#">Supporto</a></li>
+                            <li> <a href="#">Contatta l'ufficio vendite</a></li>
                         </ul>
                     </nav>
                     <div class="btn">
-                        <button>Accedi</button>
-                        <button>Inizia</button>
+                        <button class="btn-default btn-white">Accedi</button>
+                        <button class="btn-default btn-blue">Inizia</button>
                     </div>
                 </div>
             </section>
