--- a/index.html
+++ b/index.html
@@ -48,7 +48,27 @@
 
             <section class="jumbo">
                 <div class="big-container">
-                    <div class="jumbo-img"></div>
+                    <h1>Tutto ci&ograve; che ti serve per il lavoro, in un unico posto</h1>
+
+                    <div class="jumbo-txt-block">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
+                            Dropbox Business &egrave; più di uno spazio di archiviazione sicuro: &egrave; un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                        </p>
+                        
+                        <div class="jumbo-btn">
+                            <button class="btn-default btn-blue">Inizia la tua prova gratuita</button>
+                            <button class="btn-default">Annulla in qualsiasi momento</button>
+                        </div>
+
+                    </div>
+                    
+                    <div class="bottom-arrow">
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+
+                    <div class="jumbo-img">
+                        <img src="./img/jumbo.png" alt="Jumbo Img">
+                    </div>
                 </div>
             </section>
         </header>
