--- a/index.html
+++ b/index.html
@@ -294,8 +294,13 @@
             <!-- FIND PARTNER-->
             <section class="find-partner">
                 <div class="default-container flex-center">
-                    <div class="left-findpartner-img"></div>
-                    <div class="right-findpartner-txt"></div>
+                    <div class="left-findpartner-img">
+                    </div>
+                    <div class="right-findpartner-txt">
+                        <h3>Entra in contratto con un partner Dropbox</h3>
+                        <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i serizi nesessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                        <button class="btn-default btn-white-border">Trova un partner</button>
+                    </div>
                 </div>
             </section>
 
