--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
                     <h2>Esegui più operazioni con Dropbox Business</h2>
 
                     <div class="business-operation-row flex-center">
+                        
                         <article class="business-operation-card">
                             <div class="business-operation-card-box-img flex-center">
                                 <img src="./img/business-feature-switching-tools.png" alt="business-feature-switching-tools">
@@ -326,31 +327,80 @@
                         </article>
 
                         <article class="business-operation-card">
-                            <div class="business-operation-card-box-img">img</div>
-                            <div class="business-operation-card-box-txt">txt</div>
+                            <div class="business-operation-card-box-img flex-center">
+                                <img src="./img/business-feature-send-files-it.png" alt="business-feature-switching-tools">
+                            </div>
+                            <div class="business-operation-card-box-txt">
+                                <h3>
+                                    Passa di meno da uno strumento all'altro
+                                </h3>
+                                <p>
+                                    Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Folgi e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                                </p>
+                            </div>
                         </article>
 
+
                         <article class="business-operation-card">
-                            <div class="business-operation-card-box-img">img</div>
-                            <div class="business-operation-card-box-txt">txt</div>
+                            <div class="business-operation-card-box-img flex-center">
+                                <img src="./img/business-feature-coordinate-it.png" alt="business-feature-switching-tools">
+                            </div>
+                            <div class="business-operation-card-box-txt">
+                                <h3>
+                                    Passa di meno da uno strumento all'altro
+                                </h3>
+                                <p>
+                                    Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Folgi e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                                </p>
+                            </div>
                         </article>
+
                     </div>
 
                     <div class="business-operation-row bottom-row flex-center">
+                        
                         <article class="business-operation-card">
-                            <div class="business-operation-card-box-img">img</div>
-                            <div class="business-operation-card-box-txt">txt</div>
+                            <div class="business-operation-card-box-img flex-center">
+                                <img src="./img/business-feature-integrations-it.png" alt="business-feature-switching-tools">
+                            </div>
+                            <div class="business-operation-card-box-txt">
+                                <h3>
+                                    Passa di meno da uno strumento all'altro
+                                </h3>
+                                <p>
+                                    Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Folgi e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                                </p>
+                            </div>
                         </article>
 
                         <article class="business-operation-card">
-                            <div class="business-operation-card-box-img">img</div>
-                            <div class="business-operation-card-box-txt">txt</div>
+                            <div class="business-operation-card-box-img flex-center">
+                                <img src="./img/business-feature-multi-device.png" alt="business-feature-switching-tools">
+                            </div>
+                            <div class="business-operation-card-box-txt">
+                                <h3>
+                                    Passa di meno da uno strumento all'altro
+                                </h3>
+                                <p>
+                                    Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Folgi e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                                </p>
+                            </div>
                         </article>
 
                         <article class="business-operation-card">
-                            <div class="business-operation-card-box-img">img</div>
-                            <div class="business-operation-card-box-txt">txt</div>
+                            <div class="business-operation-card-box-img flex-center">
+                                <img src="./img/business-feature-security.png" alt="business-feature-switching-tools">
+                            </div>
+                            <div class="business-operation-card-box-txt">
+                                <h3>
+                                    Passa di meno da uno strumento all'altro
+                                </h3>
+                                <p>
+                                    Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Folgi e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                                </p>
+                            </div>
                         </article>
+
                     </div>
 
                 </div>
