Add customer data section content

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                     <button class="btn-default btn-blue">Prova gratis per 30 giorni</button>
                                 </div>
 
-                                <span class="buy-now">oppure <a href="#">acquista ora</a></span>
+                                <span class="buy-now">oppure <a href="#" class="link-blue">acquista ora</a></span>
 
 
                                 <div class="separator-box-business-plane"></div>
@@ -169,7 +169,7 @@
                                     <button class="btn-default btn-blue">Prova gratis per 30 giorni</button>
                                 </div>
 
-                                <span class="buy-now">oppure <a href="#">acquista ora</a></span>
+                                <span class="buy-now">oppure <a href="#" class="link-blue">acquista ora</a></span>
 
 
                                 <div class="separator-box-business-plane"></div>
@@ -236,7 +236,7 @@
                                     <button class="btn-default btn-blue">Prova gratis per 30 giorni</button>
                                 </div>
 
-                                <span class="buy-now">oppure <a href="#">acquista ora</a></span>
+                                <span class="buy-now">oppure <a href="#" class="link-blue">acquista ora</a></span>
 
 
                                 <div class="separator-box-business-plane"></div>
@@ -409,8 +409,8 @@
             <!-- CUSTOMER DATA-->
             <section class="customer-data">
                 <div class="default-container">
-                    <h2>Lorem ipsum dolor sit amet.</h2>
-                    <a href="#">Lorem ipsum dolor</a>
+                    <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                    <a href="#" class="link-blue">Scopri di più sui nostri clienti</a>
                 </div>
             </section>
 
