Add Company collaboration section content

--- a/index.html
+++ b/index.html
@@ -417,20 +417,44 @@
             <!-- COMPANY COLLABORATION-->
             <section class="company-collaboration flex-center">
                 <div class="company-collaboration-square">
-                    <div class="company-collaboration-square-box"></div>
-                    <div class="company-collaboration-square-box"></div>
-                    <div class="company-collaboration-square-box"></div>
-                    <div class="company-collaboration-square-box"></div>
+                    <div class="company-collaboration-square-box flex-center" id="designit">
+                        <img src="./img/designit.svg" alt="Designit Logo">
+                    </div>
+                    <div class="company-collaboration-square-box flex-center" id="asu">
+                        <img src="./img/arizona_state_university.svg" alt="Asu Logo">
+                    </div>
+                    <div class="company-collaboration-square-box flex-center" id="uf-florida">
+                        <img src="./img/university_of_florida.svg" alt="UF Florida Logo">
+                    </div>
+                    <div class="company-collaboration-square-box flex-center" id="topps">
+                        <img src="./img/topps.svg" alt="Topps Logo">
+                    </div>
+                </div>
+
+                <div class="company-collaboration-square company-collaboration-square-center-txt">
+                    <img src="./img/designit.svg" alt="Designit Logo">
+
+                    <div class="separator-box-business-plane"></div>
+
+                    <p>
+                        "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quando Dropbox Paper":
+                    </p>
+                    <span>Morten Thomsen, Global IT Lead</span>
                 </div>
 
                 <div class="company-collaboration-square">
-                </div>
-
-                <div class="company-collaboration-square">
-                    <div class="company-collaboration-square-box"></div>
-                    <div class="company-collaboration-square-box"></div>
-                    <div class="company-collaboration-square-box"></div>
-                    <div class="company-collaboration-square-box"></div>
+                    <div class="company-collaboration-square-box flex-center" id="world-bicycle">
+                        <img src="./img/world_bicycle_relief.svg" alt="World Bicycle Relief Logo">
+                    </div>
+                    <div class="company-collaboration-square-box flex-center" id="hearst-corp">
+                        <img src="./img/hearst_corp.svg" alt="Hearst Corp Logo">
+                    </div>
+                    <div class="company-collaboration-square-box flex-center" id="lonely-planet">
+                        <img src="./img/lonely_planet.svg" alt="">
+                    </div>
+                    <div class="company-collaboration-square-box flex-center" id="clear-channel">
+                        <img src="./img/clear_channel.svg" alt="Clear Channel Logo">
+                    </div>
                 </div>
             </section>
 
