--- a/index.html
+++ b/index.html
@@ -459,10 +459,17 @@
             </section>
 
             <!-- Try Dropbox-->
-            <section class="customer-data bg-blue">
-                <div class="default-container">
-                    <h2>Lorem ipsum dolor sit amet.</h2>
-                    <a href="#">Lorem ipsum dolor</a>
+            <section class="try-dropbox bg-blue">
+                <div class="default-container flex-center">
+
+                    <div class="try-dropbox-left flex-center">
+                        <h2>Porta Dropbox Business nella tua azienda</h2>
+                    </div>
+
+                    <div class="try-dropbox-right-btn flex-center">
+                        <button class="btn-default btn-white">Inizia la tua prova gratuita</button>
+                    </div>
+
                 </div>
             </section>
 
