--- a/index.html
+++ b/index.html
@@ -476,12 +476,23 @@
             <!-- Faq -->
             <section class="faq">
                 <div class="default-container">
-                    <h1>Domande Frequenti</h1>
+                    <h2>Domande Frequenti</h2>
 
                     <div class="faq-section">
-                        <span class="faq-section-close">Lorem ipsum dolor sit amet consectetur.</span>
-                        <span class="faq-section-close">Lorem ipsum dolor sit amet consectetur.</span>
-                        <span class="faq-section-close">Lorem ipsum dolor sit amet consectetur.</span>
+                        <div class="faq-section-close flex-center">
+                            <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+
+                        <div class="faq-section-close flex-center">
+                            <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+
+                        <div class="faq-section-close flex-center">
+                            <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
                     </div>
                 </div>
             </section>
