--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
 
         <header>
-            <section class="nav flex-center">
+            <section class="nav flex-between">
                 <div class="left-nav-content flex-center">
                     <img src="./img/logo-small.png" alt="Discord Logo">
                     <nav class="main-nav">
@@ -479,17 +479,17 @@
                     <h2>Domande Frequenti</h2>
 
                     <div class="faq-section">
-                        <div class="faq-section-close flex-center">
+                        <div class="faq-section-close flex-between">
                             <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
                             <i class="fa-solid fa-chevron-down"></i>
                         </div>
 
-                        <div class="faq-section-close flex-center">
+                        <div class="faq-section-close flex-between">
                             <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
                             <i class="fa-solid fa-chevron-down"></i>
                         </div>
 
-                        <div class="faq-section-close flex-center">
+                        <div class="faq-section-close flex-between">
                             <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
                             <i class="fa-solid fa-chevron-down"></i>
                         </div>
@@ -502,11 +502,11 @@
 
         <footer>
             <div class="big-container">
-                <section class="top-footer flex-around">
+                <section class="top-footer flex-between">
                     <nav class="footer-navs">
-                        <h3>Dropbox</h3>
+                        <h5>Dropbox</h5>
                         <ul>
-                            <li><a href="#">Applicazione Dekstop</a></li>
+                            <li><a href="#">Applicazione Desktop</a></li>
                             <li><a href="#">Perché Dropbox</a></li>
                             <li><a href="#">Piani</a></li>
                             <li><a href="#">Sicurezza</a></li>
@@ -515,9 +515,9 @@
                     </nav>
 
                     <nav class="footer-navs">
-                        <h3>Dropbox</h3>
+                        <h5>Prodotti</h5>
                         <ul>
-                            <li><a href="#">Applicazione Dekstop</a></li>
+                            <li><a href="#">Applicazione Desktop</a></li>
                             <li><a href="#">Perché Dropbox</a></li>
                             <li><a href="#">Piani</a></li>
                             <li><a href="#">Sicurezza</a></li>
@@ -526,9 +526,9 @@
                     </nav>
 
                     <nav class="footer-navs">
-                        <h3>Dropbox</h3>
+                        <h5>Azienda</h5>
                         <ul>
-                            <li><a href="#">Applicazione Dekstop</a></li>
+                            <li><a href="#">Applicazione Desktop</a></li>
                             <li><a href="#">Perché Dropbox</a></li>
                             <li><a href="#">Piani</a></li>
                             <li><a href="#">Sicurezza</a></li>
@@ -537,9 +537,9 @@
                     </nav>
 
                     <nav class="footer-navs">
-                        <h3>Dropbox</h3>
+                        <h5>Supporto</h5>
                         <ul>
-                            <li><a href="#">Applicazione Dekstop</a></li>
+                            <li><a href="#">Applicazione Desktop</a></li>
                             <li><a href="#">Perché Dropbox</a></li>
                             <li><a href="#">Piani</a></li>
                             <li><a href="#">Sicurezza</a></li>
@@ -548,9 +548,9 @@
                     </nav>
 
                     <nav class="footer-navs">
-                        <h3>Dropbox</h3>
+                        <h5>Community</h5>
                         <ul>
-                            <li><a href="#">Applicazione Dekstop</a></li>
+                            <li><a href="#">Applicazione Desktop</a></li>
                             <li><a href="#">Perché Dropbox</a></li>
                             <li><a href="#">Piani</a></li>
                             <li><a href="#">Sicurezza</a></li>
