Add footer bottom content

--- a/index.html
+++ b/index.html
@@ -564,7 +564,9 @@
                 <div class="separator-line"></div>
 
                 <section class="bottom-footer">
-                    <span class="languages">Italian</span>
+                    <span class="languages">
+                        <i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-up"></i>
+                    </span>
                 </section>
             </div>
         </footer>
