Add animation & anchor tag on Arrow

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     
                     <div class="bottom-arrow">
-                        <i class="fa-solid fa-arrow-down"></i>
+                        <a href="#ancora"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
 
                     <div class="jumbo-img">
@@ -75,7 +75,7 @@
 
         <main>
             <!-- BUSINESS PLANE -->
-            <section class="business-plane">
+            <section class="business-plane" id="ancora">
 
                 <div class="default-container">
                     <h2>Trova il piano business che fa per te</h2>
