fix id and for radio button

--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
 
                     <div class="label">
                         <div class="mensile">
-                            <input type="radio" id="mensile" name="fatturazione" value="one">
-                            <label for="Fatturazione">Fatturazione Mensile</label>
+                            <input type="radio" id="" name="fatturazione" value="one">
+                            <label for="">Fatturazione Mensile</label>
                         </div>
                         <div class="annua">
-                            <input type="radio" id="annuale" name="fatturazione" value="two">
-                            <label for="Fatturazione">Fatturazione Annuale</label>
+                            <input type="radio" id="" name="fatturazione" value="two">
+                            <label for="">Fatturazione Annuale</label>
                         </div>
                     </div>
+
                     <!-- Section box -->
                     <div class="box-plane-general-section">
                         <!-- box single -->
