--- a/index.html
+++ b/index.html
@@ -108,13 +108,21 @@
                                 </section>
 
                                 <section class="features">
-                                    <span>
-                                        <i class="fa-solid fa-user"></i> 1 utente</span>                               
-                                    <span>
-                                        <i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro
-                                    </span>
-                                    <span><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</span>
-                                </section>
+                                    <div class="flex">
+                                        <span class="icon-spacing"><i class="fa-solid fa-user"></i></span>
+                                        <span>1 utente</span>
+                                    </div>  
+
+                                    <div class="flex">
+                                        <span class="icon-spacing"><i class="fa-solid fa-folder"></i> </span>
+                                        <span>5 TB di spazio di archiviazione sicuro</span>
+                                    </div>
+
+                                    <div class="flex">
+                                        <span class="icon-spacing"><i class="fa-solid fa-share-nodes"></i></span>
+                                        <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                    </div>
+                                    </section>
 
                                 <div class="free-trial-day flex-center">
                                     <button class="btn-default btn-blue">Prova gratis per 30 giorni</button>
@@ -156,15 +164,22 @@
                                 </section>
 
                                 <section class="features">
-                                    <span>
-                                        <i class="fa-solid fa-user"></i> 3 o pi&ugrave; utente</span>                               
-                                    <span>
-                                        <i class="fa-solid fa-folder"></i>Tutto lo spazio di cui ha bisogno il tuo team
-                                    </span>
-                                    <span>
-                                        <i class="fa-solid fa-share-nodes"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
-                                    </span>
-                                    </section>
+                                    <div class="flex">
+                                        <span class="icon-spacing"><i class="fa-solid fa-user"></i> </span>
+                                        <span> 3 o pi&ugrave; utenti</span>  
+                                    </div>
+
+                                    <div class="flex">
+                                        <span class="icon-spacing"><i class="fa-solid fa-folder"></i></span>
+                                        <span>Tutto lo spazio di cui ha bisogno il tuo team</span>
+                                    </div>
+
+                                    <div class="flex">
+                                        <span class="icon-spacing"><i class="fa-solid fa-share-nodes"></i></span>
+                                        <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
+                                    </div>
+
+                                </section>
 
                                 <div class="free-trial-day flex-center">
                                     <button class="btn-default btn-blue">Prova gratis per 30 giorni</button>
@@ -222,15 +237,21 @@
                                 </section>
 
                                 <section class="features">
+
+                                    <div class="flex">
                                     <span>
-                                        <i class="fa-solid fa-user"></i> 10 o &ugrave; utente</span>                               
-                                    <span>
-                                        <i class="fa-solid fa-folder"></i> Soluzioni personalizzabili per la tua azienda
-                                    </span>
-                                    <span>
-                                        <i class="fa-solid fa-share-nodes"></i> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala                                
-                                    </span>
-                                    
+                                        <i class="fa-solid fa-user"></i> 10 o pi&ugrave; utenti</span>                               
+                                    </div>
+
+                                    <div class="flex">
+                                        <span class="icon-spacing"><i class="fa-solid fa-folder"></i> </span>
+                                        <span>Soluzioni personalizzabili per la tua azienda</span>
+                                    </div>
+
+                                    <div class="flex">
+                                        <span class="icon-spacing"><i class="fa-solid fa-share-nodes"></i></span> 
+                                        <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>
+                                    </div>
                                 </section>
 
                                 <div class="free-trial-day flex-center">
